(bug): adding tagging keyword filting via input, fix tagging replacing old, fix alignment of inputs in tagging, refactor contains code

--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -123,7 +123,8 @@ $color-chip-text: $color-white;
         line-height: 35px;
         display: inline-block;
         height: 35px;
-        vertical-align: super;
+        vertical-align: bottom;
+        margin-bottom: 5px;
 
         &:focus {
           outline: none;
